--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "drizzle-orm": "^0.39.2",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "resend": "^4.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
