--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:push": "pnpm drizzle-kit push"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -29,6 +30,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "resend": "^4.1.2",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2"
