--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@uploadthing/react": "^7.3.0",
     "better-auth": "^1.1.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,6 +34,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.5.2",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
