--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "@types/uuid": "^10.0.0",
     "@uploadthing/react": "^7.3.0",
     "better-auth": "^1.1.16",
     "class-variance-authority": "^0.7.1",
@@ -43,6 +44,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.5.2",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
