--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
+    "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.482.0",
     "mysql2": "^3.9.2",
     "next": "15.1.6",
